# rules_bazelrio

./: MODULE.bazel  WORKSPACE  robot_rules.bzl
.github/workflows/: build.yml
deploy/: BUILD
deploy/src/main/java/org/bazelrio/deploy/: BUILD  Deploy.java  Deployer.java  Main.java  RoborioImageValidator.java
generate/: BUILD.bazel  MODULE.bazel  generate.py
generate/templates/tests/: MODULE.bazel.jinja2  WORKSPACE.jinja2
tests/: .bazelrc  MODULE.bazel  WORKSPACE
tests/robot-cpp/: BUILD.bazel  robot.cpp
tests/robot-java/: BUILD.bazel  Robot.java
tests/src/: BUILD.bazel
