load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_library(
    name = "get_group",
    srcs = ["get_group.py"],
    visibility = ["//visibility:public"],
    deps = [
        "@bzlmodrio-gentool//bazelrio_gentool",
    ],
)

py_binary(
    name = "generate",
    srcs = ["generate.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":get_group",
        ":get_version",
    ],
)

py_binary(
    name = "publish",
    srcs = ["publish.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":get_group",
    ],
)

py_binary(
    name = "get_version",
    srcs = ["get_version.py"],
    visibility = ["//visibility:public"],
)
